[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/KOZGOPRO-MEDIUM-ENG.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Buttons/Button.png" type="Texture" id=2]
[ext_resource path="res://Cutscenes/Cutscene.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Cutscene" type="Node2D"]
script = ExtResource( 3 )

[node name="SceneOne" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="SceneOne"]

[node name="TextBoxOne" type="Node2D" parent="SceneOne"]

[node name="Sprite" type="Sprite" parent="SceneOne/TextBoxOne"]
position = Vector2( 700.5, 543.5 )
scale = Vector2( 3.45833, 2.33673 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="SceneOne/TextBoxOne"]
margin_left = 403.0
margin_top = 462.0
margin_right = 992.0
margin_bottom = 619.0
theme = SubResource( 2 )
text = "It was a frigid December night, and international business man _ was at home visiting family for the holidays when..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneTwo" type="Node2D" parent="."]
visible = false

[node name="Background" type="Sprite" parent="SceneTwo"]

[node name="TextBoxOne" type="Node2D" parent="SceneTwo"]

[node name="Sprite" type="Sprite" parent="SceneTwo/TextBoxOne"]
position = Vector2( 700.5, 543.5 )
scale = Vector2( 3.45833, 2.33673 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="SceneTwo/TextBoxOne"]
margin_left = 409.5
margin_top = 485.5
margin_right = 998.5
margin_bottom = 590.5
theme = SubResource( 2 )
text = "A phonecall from his boss interrupted his peaceful evening"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneThree" type="Node2D" parent="."]
visible = false

[node name="Background" type="Sprite" parent="SceneThree"]

[node name="TextBoxOne2" type="Node2D" parent="SceneThree"]

[node name="Sprite" type="Sprite" parent="SceneThree/TextBoxOne2"]
position = Vector2( 700.5, 543.5 )
scale = Vector2( 3.45833, 2.33673 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="SceneThree/TextBoxOne2"]
margin_left = 413.5
margin_top = 460.5
margin_right = 1002.5
margin_bottom = 617.5
theme = SubResource( 2 )
text = "\"_, December is the month of business. I need you out meeting clients now. Get on the next plane to Shanghai or you're fired!\""
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneFour" type="Node2D" parent="."]
visible = false

[node name="Background" type="Sprite" parent="SceneFour"]

[node name="TextBoxOne3" type="Node2D" parent="SceneFour"]

[node name="Sprite" type="Sprite" parent="SceneFour/TextBoxOne3"]
position = Vector2( 700.5, 543.5 )
scale = Vector2( 3.45833, 2.33673 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="SceneFour/TextBoxOne3"]
margin_left = 412.5
margin_top = 457.5
margin_right = 1001.5
margin_bottom = 614.5
theme = SubResource( 2 )
text = "And so, with a prayer that someone or something was watching out for him, _ left for the airport to try and catch a last minute flight."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
